[gd_scene load_steps=44 format=3 uid="uid://bwudica5cnvru"]

[ext_resource type="Script" uid="uid://y4wib0gswut3" path="res://Assets/Scripts/base_carscript.gd" id="1_urwr1"]
[ext_resource type="PackedScene" uid="uid://dd8xegxwmg0nv" path="res://Scenes/Powerups/FireZoom.tscn" id="4_2ykyf"]
[ext_resource type="Texture2D" uid="uid://ci60wus17kpah" path="res://Assets/Textures/example-4-1-2681458205.png" id="5_lpfw3"]
[ext_resource type="Texture2D" uid="uid://572fcfjag558" path="res://Assets/Textures/BallGradient.png" id="6_kwdaq"]
[ext_resource type="AudioStream" uid="uid://de2qogpkpgc0a" path="res://Assets/Textures/rally-car-idle-loop-17-84405.mp3" id="7_gpiql"]
[ext_resource type="PackedScene" uid="uid://btv16dky8ak5t" path="res://Scenes/UI/car_ui.tscn" id="9_ieg3u"]
[ext_resource type="Script" uid="uid://c4ybubb2k6w5m" path="res://Assets/Scripts/Car_cam,era.gd" id="10_snwvq"]
[ext_resource type="Script" uid="uid://71s4l4dvheu3" path="res://Assets/Scripts/on_road_cast.gd" id="11_17gj5"]
[ext_resource type="Script" uid="uid://c76mwx0ythij4" path="res://Assets/Scripts/CarScripts/car_state_machine.gd" id="12_5ex5x"]
[ext_resource type="Script" uid="uid://dk1jq7owplvhg" path="res://Assets/Scripts/CarScripts/idle_state.gd" id="13_7o5ea"]
[ext_resource type="Script" uid="uid://c153c3qadh666" path="res://Assets/Scripts/CarScripts/driving_state.gd" id="14_uoh37"]
[ext_resource type="Script" uid="uid://c603t46wh86dj" path="res://Assets/Scripts/CarScripts/driftign_state.gd" id="15_uoh37"]
[ext_resource type="Script" uid="uid://cl4slgvr4a40v" path="res://Assets/Scripts/CarScripts/powerup_state.gd" id="16_p8gwd"]
[ext_resource type="Script" uid="uid://dpovl2r08hrr2" path="res://Assets/Scripts/CarScripts/damage_state.gd" id="17_k48s7"]
[ext_resource type="Script" uid="uid://g1snf348ejj" path="res://Assets/Scripts/CarScripts/finished_state.gd" id="18_6oarg"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7mkct"]
albedo_color = Color(0.345098, 0.345098, 0.345098, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_l024u"]

[sub_resource type="VisualShaderNodeMix" id="VisualShaderNodeMix_ppwv6"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(1, 1, 1, 1), 2, Quaternion(0.5, 0.5, 0.5, 0.5)]
op_type = 5

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_po5nm"]
parameter_name = "DisolveAmmount"
hint = 1

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_mcmwp"]

[sub_resource type="VisualShaderNodeVec2Parameter" id="VisualShaderNodeVec2Parameter_cd0s7"]
parameter_name = "DisolveSpeed"

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_sj77t"]
input_name = "time"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_chqss"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_4x6ef"]
input_name = "uv"

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_30cll"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeVec2Parameter" id="VisualShaderNodeVec2Parameter_4grqe"]
parameter_name = "Disolve_tile"
default_value_enabled = true
default_value = Vector2(1, 1)

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_2tbqx"]
parameter_name = "ColorRemove"

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_do3pa"]
parameter_name = "MainTexture"
texture_type = 1
color_default = 1

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_jio0x"]
source = 5

[sub_resource type="VisualShaderNodeVectorDecompose" id="VisualShaderNodeVectorDecompose_qd3uq"]
default_input_values = [0, Quaternion(0, 0, 0, 0)]
op_type = 2

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_q4vhu"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(0, 0, 0, 0)]
op_type = 2
operator = 2

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_3inox"]
parameter_name = "Disolve"
texture_type = 1
color_default = 1

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_n2qo6"]
source = 5

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_vrx7y"]
default_input_values = [0, Quaternion(0, 0, 0, 0), 1, Quaternion(0, 0, 0, 0)]
op_type = 2
operator = 2

[sub_resource type="VisualShaderNodeBillboard" id="VisualShaderNodeBillboard_01jod"]
billboard_type = 3
keep_scale = true

[sub_resource type="VisualShader" id="VisualShader_8uj5g"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, depth_test_default, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

uniform vec4 ColorRemove : source_color;
uniform sampler2D MainTexture : source_color, hint_default_black;
uniform vec2 Disolve_tile = vec2(1.000000, 1.000000);
uniform vec2 DisolveSpeed;
uniform sampler2D Disolve : source_color, hint_default_black;
uniform float DisolveAmmount : hint_range(0.0, 1.0);



void vertex() {
	mat4 n_out2p0;
// GetBillboardMatrix:2
	{
		mat4 __wm = mat4(normalize(INV_VIEW_MATRIX[0]), normalize(INV_VIEW_MATRIX[1]), normalize(INV_VIEW_MATRIX[2]), MODEL_MATRIX[3]);
		__wm = __wm * mat4(vec4(cos(INSTANCE_CUSTOM.x), -sin(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(sin(INSTANCE_CUSTOM.x), cos(INSTANCE_CUSTOM.x), 0.0, 0.0), vec4(0.0, 0.0, 1.0, 0.0), vec4(0.0, 0.0, 0.0, 1.0));
		__wm = __wm * mat4(vec4(length(MODEL_MATRIX[0].xyz), 0.0, 0.0, 0.0), vec4(0.0, length(MODEL_MATRIX[1].xyz), 0.0, 0.0), vec4(0.0, 0.0, length(MODEL_MATRIX[2].xyz), 0.0), vec4(0.0, 0.0, 0.0, 1.0));
		n_out2p0 = VIEW_MATRIX * __wm;
	}


// Output:0
	MODELVIEW_MATRIX = n_out2p0;


}

void fragment() {
// ColorParameter:19
	vec4 n_out19p0 = ColorRemove;


	vec4 n_out3p0;
// Texture2D:3
	n_out3p0 = texture(MainTexture, UV);


// Input:16
	vec2 n_out16p0 = UV;


// Vector2Parameter:18
	vec2 n_out18p0 = Disolve_tile;


// VectorOp:17
	vec2 n_out17p0 = n_out16p0 * n_out18p0;


// Input:14
	float n_out14p0 = TIME;


// Vector2Parameter:13
	vec2 n_out13p0 = DisolveSpeed;


// VectorOp:15
	vec2 n_out15p0 = vec2(n_out14p0) * n_out13p0;


// UVFunc:12
	vec2 n_in12p1 = vec2(1.00000, 1.00000);
	vec2 n_out12p0 = n_out15p0 * n_in12p1 + n_out17p0;


	vec4 n_out8p0;
// Texture2D:8
	n_out8p0 = texture(Disolve, n_out12p0);


// VectorOp:9
	vec4 n_out9p0 = n_out3p0 * n_out8p0;


// FloatParameter:11
	float n_out11p0 = DisolveAmmount;


// Mix:10
	vec4 n_out10p0 = mix(n_out3p0, n_out9p0, vec4(n_out11p0));


// VectorOp:6
	vec4 n_out6p0 = n_out19p0 * n_out10p0;


// VectorDecompose:4
	float n_out4p0 = n_out6p0.x;
	float n_out4p1 = n_out6p0.y;
	float n_out4p2 = n_out6p0.z;
	float n_out4p3 = n_out6p0.w;


// Output:0
	ALBEDO = vec3(n_out6p0.xyz);
	ALPHA = n_out4p2;


}
"
flags/unshaded = true
nodes/vertex/0/position = Vector2(1300, 20)
nodes/vertex/2/node = SubResource("VisualShaderNodeBillboard_01jod")
nodes/vertex/2/position = Vector2(761.863, 64.6223)
nodes/vertex/connections = PackedInt32Array(2, 0, 0, 10)
nodes/fragment/0/position = Vector2(1340, -40)
nodes/fragment/2/node = SubResource("VisualShaderNodeTexture2DParameter_do3pa")
nodes/fragment/2/position = Vector2(80, -220)
nodes/fragment/3/node = SubResource("VisualShaderNodeTexture_jio0x")
nodes/fragment/3/position = Vector2(520, 40)
nodes/fragment/4/node = SubResource("VisualShaderNodeVectorDecompose_qd3uq")
nodes/fragment/4/position = Vector2(1140, 40)
nodes/fragment/6/node = SubResource("VisualShaderNodeVectorOp_q4vhu")
nodes/fragment/6/position = Vector2(1060, -220)
nodes/fragment/7/node = SubResource("VisualShaderNodeTexture2DParameter_3inox")
nodes/fragment/7/position = Vector2(-80, 740)
nodes/fragment/8/node = SubResource("VisualShaderNodeTexture_n2qo6")
nodes/fragment/8/position = Vector2(620, 580)
nodes/fragment/9/node = SubResource("VisualShaderNodeVectorOp_vrx7y")
nodes/fragment/9/position = Vector2(760, 240)
nodes/fragment/10/node = SubResource("VisualShaderNodeMix_ppwv6")
nodes/fragment/10/position = Vector2(900, -60)
nodes/fragment/11/node = SubResource("VisualShaderNodeFloatParameter_po5nm")
nodes/fragment/11/position = Vector2(520, -220)
nodes/fragment/12/node = SubResource("VisualShaderNodeUVFunc_mcmwp")
nodes/fragment/12/position = Vector2(360, 500)
nodes/fragment/13/node = SubResource("VisualShaderNodeVec2Parameter_cd0s7")
nodes/fragment/13/position = Vector2(-280, 460)
nodes/fragment/14/node = SubResource("VisualShaderNodeInput_sj77t")
nodes/fragment/14/position = Vector2(-280, 380)
nodes/fragment/15/node = SubResource("VisualShaderNodeVectorOp_chqss")
nodes/fragment/15/position = Vector2(80, 380)
nodes/fragment/16/node = SubResource("VisualShaderNodeInput_4x6ef")
nodes/fragment/16/position = Vector2(-300, 60)
nodes/fragment/17/node = SubResource("VisualShaderNodeVectorOp_30cll")
nodes/fragment/17/position = Vector2(160, 100)
nodes/fragment/18/node = SubResource("VisualShaderNodeVec2Parameter_4grqe")
nodes/fragment/18/position = Vector2(-260, 140)
nodes/fragment/19/node = SubResource("VisualShaderNodeColorParameter_2tbqx")
nodes/fragment/19/position = Vector2(760, -440)
nodes/fragment/connections = PackedInt32Array(7, 0, 8, 2, 8, 0, 9, 1, 3, 0, 10, 0, 9, 0, 10, 1, 10, 0, 6, 1, 11, 0, 10, 2, 12, 0, 8, 0, 13, 0, 15, 1, 15, 0, 12, 2, 18, 0, 17, 1, 17, 0, 12, 0, 16, 0, 17, 0, 14, 0, 15, 0, 2, 0, 3, 2, 6, 0, 4, 0, 3, 0, 9, 0, 6, 0, 0, 0, 19, 0, 6, 0, 4, 2, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4tobr"]
render_priority = -1
shader = SubResource("VisualShader_8uj5g")
shader_parameter/ColorRemove = Color(1, 1, 1, 1)
shader_parameter/MainTexture = ExtResource("6_kwdaq")
shader_parameter/Disolve_tile = Vector2(0.1, 0.1)
shader_parameter/DisolveSpeed = Vector2(0.01, 0.03)
shader_parameter/Disolve = ExtResource("5_lpfw3")
shader_parameter/DisolveAmmount = 0.0

[sub_resource type="Curve" id="Curve_sgp8b"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.956608, 0.97147), 0.0, 0.0, 0, 0, Vector2(0.994083, 0.98098), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_sxnr5"]
curve = SubResource("Curve_sgp8b")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ylc5q"]
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 2, 0)
scale_min = 0.3
scale_max = 1.5
scale_curve = SubResource("CurveTexture_sxnr5")
color = Color(0, 0, 0, 0.643137)

[sub_resource type="QuadMesh" id="QuadMesh_n2ksd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_yhcn8"]
height = 7.79918
radius = 2.31735

[sub_resource type="BoxMesh" id="BoxMesh_rrify"]
lightmap_size_hint = Vector2i(9, 28)
size = Vector3(0.5, 2, 0.5)

[node name="VehicleBody3D" type="VehicleBody3D" node_paths=PackedStringArray("LFW", "RFW", "LBW", "RBW")]
collision_layer = 25
collision_mask = 31
mass = 300.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.52, 0.98)
script = ExtResource("1_urwr1")
LFW = NodePath("LFW")
RFW = NodePath("RFW")
LBW = NodePath("LBW")
RBW = NodePath("RBW")
Acceleration = 1000

[node name="CarStateMachine" type="Node" parent="."]
script = ExtResource("12_5ex5x")
start_state_path = NodePath("DrivingState")

[node name="IdleState" type="Node" parent="CarStateMachine"]
script = ExtResource("13_7o5ea")

[node name="DrivingState" type="Node" parent="CarStateMachine"]
script = ExtResource("14_uoh37")

[node name="DriftingState" type="Node" parent="CarStateMachine"]
script = ExtResource("15_uoh37")

[node name="PowerupState" type="Node" parent="CarStateMachine"]
script = ExtResource("16_p8gwd")

[node name="DamageState" type="Node" parent="CarStateMachine"]
script = ExtResource("17_k48s7")

[node name="FinishedState" type="Node" parent="CarStateMachine"]
script = ExtResource("18_6oarg")

[node name="DamageArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.826773, 0)
collision_layer = 0
collision_mask = 128

[node name="LFW" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.417799, 3.29216)
brake = 10.0
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.7
wheel_rest_length = 0.5
wheel_friction_slip = 1.0
suspension_stiffness = 30.0
suspension_max_force = 8000.0
damping_compression = 0.3

[node name="RFW" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.417428, 3.292)
brake = 10.0
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 1.0
wheel_radius = 0.7
wheel_rest_length = 0.5
wheel_friction_slip = 1.0
suspension_stiffness = 30.0
suspension_max_force = 8000.0
damping_compression = 0.3

[node name="LBW" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.417799, -2.0832)
brake = 10.0
use_as_traction = true
wheel_roll_influence = 0.15
wheel_radius = 0.7
wheel_rest_length = 0.5
wheel_friction_slip = 0.8
suspension_stiffness = 30.0
suspension_max_force = 8000.0

[node name="RBW" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0.417428, -2.083)
brake = 10.0
use_as_traction = true
wheel_roll_influence = 0.15
wheel_radius = 0.7
wheel_rest_length = 0.5
wheel_friction_slip = 0.8
suspension_stiffness = 30.0
suspension_max_force = 8000.0

[node name="Exhaust" type="MeshInstance3D" parent="."]
transform = Transform3D(0.214935, 0, 0, 0, -1.12984e-08, 0.214935, 0, -0.258477, -9.39513e-09, 0.952532, 0.199183, -3.22395)
material_overlay = SubResource("StandardMaterial3D_7mkct")
mesh = SubResource("CylinderMesh_l024u")

[node name="FireNode" parent="Exhaust" instance=ExtResource("4_2ykyf")]
transform = Transform3D(0.465257, 0, 0, 0, -1.69112e-08, -0.386882, 0, 0.465257, -2.0337e-08, -0.0162659, 1.11521, -0.0100474)
visible = false

[node name="Smoke" type="GPUParticles3D" parent="Exhaust"]
transform = Transform3D(1, 0, 0, 0, 1.26287, 0, 0, -1.42109e-14, 1, 0, 1.11521, 1.19209e-07)
material_override = SubResource("ShaderMaterial_4tobr")
amount = 30
process_material = SubResource("ParticleProcessMaterial_ylc5q")
draw_pass_1 = SubResource("QuadMesh_n2ksd")

[node name="EngineSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_gpiql")
volume_db = -12.0
autoplay = true

[node name="Area3Du" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.866013, 0.669566)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3Du"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.57628e-07, 0.885158)
shape = SubResource("CylinderShape3D_yhcn8")

[node name="CheckpointChecker" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.866013, -0.14276)
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="CheckpointChecker"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 3.57628e-07, 0.63127)
shape = SubResource("CylinderShape3D_yhcn8")

[node name="Ghost_Timer" type="Timer" parent="."]
one_shot = true

[node name="centerOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.51786, 0.625559)
visible = false

[node name="TimerDamage" type="Timer" parent="."]
one_shot = true

[node name="Car_ui" parent="." node_paths=PackedStringArray("speedWheel") instance=ExtResource("9_ieg3u")]
offset_left = -216.0
offset_top = 112.0
offset_right = -216.0
offset_bottom = 112.0
speedWheel = NodePath("../LBW")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(-1, -4.17569e-10, 9.32701e-10, -2.44543e-10, 0.98397, 0.178334, -9.92217e-10, 0.178334, -0.98397, 9.32701e-11, 5.56049, -9.6719)
top_level = true
doppler_tracking = 2
script = ExtResource("10_snwvq")
lerp_speed = 4
target = NodePath("..")
offset = Vector3(0, 6, -10)

[node name="RespawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
top_level = true

[node name="Timer" type="Timer" parent="RespawnPoint"]
wait_time = 3.0
autostart = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="RespawnPoint"]
visible = false
mesh = SubResource("BoxMesh_rrify")

[node name="OnRoadCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 3.24013, 0, 0, 0, 1, 0, 1.74991, 1.19054)
collide_with_areas = true
script = ExtResource("11_17gj5")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(-1, 3.57975e-14, 8.74229e-08, 2.71022e-08, 0.950733, 0.310013, -8.31157e-08, 0.310013, -0.950733, 0, 0.543441, 4.58614)
light_color = Color(1, 0.956683, 0.789324, 1)
light_energy = 16.0
light_indirect_energy = 14.333
light_volumetric_fog_energy = 6.495
light_size = 0.536
light_specular = 3.571
spot_range = 46.335
spot_attenuation = 0.7
spot_angle = 18.63

[node name="testkamera" type="Camera3D" parent="."]
transform = Transform3D(-0.8038464, 0, 0.5948369, 0, 1, 0, -0.5948369, 0, -0.8038464, 5.372177, 1.1567922, -4.0974197)
visible = false

[connection signal="area_entered" from="Area3Du" to="." method="on_powerup_picked"]
[connection signal="area_entered" from="Area3Du" to="." method="on_powerup_pickup"]
[connection signal="area_entered" from="CheckpointChecker" to="." method="on_checkpoint_enter"]
[connection signal="timeout" from="Ghost_Timer" to="." method="_on_ghost_timer_timeout"]
[connection signal="timeout" from="RespawnPoint/Timer" to="." method="_on_respawn_timer_timeout"]
